--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -5,14 +5,12 @@
 		<!-- include css file -->
 		<link rel="stylesheet" type="text/css" href="stylesheets/vargaspu21_hw2.css"> 
 		<script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"/></script>
-		<!-- <script src="jquery-3.4.1.min.js"></script> -->
+		<script src="jquery-3.4.1.min.js"></script>
 		
 	</head>
 	<body>
-		<h1>
-			<!-- website title -->
-			Cheesecake Order Form
-		</h1>
+		<!-- website title -->
+		<h1>Cheesecake Order Form</h1>
 
 		<!-- references the cheesecake image -->
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Mondays_at_Il_Forno_-_Cheesecake_with_strawberry_sauce.jpg/800px-Mondays_at_Il_Forno_-_Cheesecake_with_strawberry_sauce.jpg" alt="Cheesecake" width="200" height="200"> 
